fix: content overflow from big image (#1283)
* fix: markdown-image-width-exceeds

* fix: adjust the width of all imgs to max-width

* fix: remove markdown test code

--- a/src/client/theme-default/slots/Content/index.less
+++ b/src/client/theme-default/slots/Content/index.less
@@ -8,6 +8,10 @@
     color: @c-primary;
   }
 
+  img {
+    max-width: 100%;
+  }
+
   // inline code
   *:not(pre) code {
     padding: 2px 5px;
